# CS-739-KVStore

./: README.md
madkv/justmod/: proj1.just  proj2.just
madkv/kvstore/: CMakeLists.txt  run_all.sh  run_all_p2.sh
madkv/kvstore/proto/: kvstore.proto
madkv/kvstore/src/: client.cpp  manager.cpp  server.cpp
madkv/kvstore/tests/: test1.txt  test2.txt  test3.sh  test4.sh  test5.sh  testing_p2.txt
madkv/report/: proj1.md  proj2.md
